// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/drafts/drafts_row should match snapshot for channel draft 1`] = `
<div>
  <div
    aria-label="draft in Channel Name"
    class="Panel"
    data-testid="draftView"
    role="link"
    tabindex="0"
  >
    <div
      class="PanelHeader"
    >
      <div
        class="PanelHeader__left"
      >
        <div>
          Draft Title
        </div>
      </div>
      <div
        class="PanelHeader__right"
      >
        <div
          class="PanelHeader__actions"
        >
          <div>
            Draft Actions
          </div>
        </div>
        <div
          class="PanelHeader__info"
        >
          <div
            class="PanelHeader__timestamp"
          >
            56 years ago
          </div>
          <div
            class="TagWrapper-kezsCu cA-dXXM Tag Tag--danger Tag--xs"
          >
            <span
              class="TagText-bWoQAI beIloY"
            >
              draft
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      Panel Body
    </div>
  </div>
</div>
`;

exports[`components/drafts/drafts_row should match snapshot for thread draft 1`] = `
<div>
  <div
    aria-label="draft in Channel Name"
    class="Panel draftError"
    data-testid="draftView"
    role="link"
    tabindex="0"
  >
    <div
      class="PanelHeader"
    >
      <div
        class="PanelHeader__left"
      >
        <div>
          Draft Title
        </div>
      </div>
      <div
        class="PanelHeader__right"
      >
        <div
          class="PanelHeader__actions"
        >
          <div>
            Draft Actions
          </div>
        </div>
        <div
          class="PanelHeader__info"
        >
          <div
            class="PanelHeader__timestamp"
          >
            56 years ago
          </div>
          <div
            class="TagWrapper-kezsCu cA-dXXM Tag Tag--danger Tag--xs"
          >
            <svg
              fill="currentColor"
              height="10"
              version="1.1"
              viewBox="0 0 24 24"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.638,16.575L14.64,3.578C14.117,2.605,13.105,2,12,2S9.883,2.605,9.359,3.578L2.362,16.575c-0.505,0.939-0.481,2.046,0.065,2.962C2.974,20.453,3.937,21,5.003,21h13.994c1.066,0,2.029-0.547,2.575-1.463
	C22.119,18.622,22.143,17.514,21.638,16.575z M18.995,18.998H5.001c-0.757,0-1.239-0.808-0.88-1.475l6.997-12.997
	C11.307,4.175,11.652,4,11.998,4s0.691,0.175,0.88,0.526l6.997,12.997C20.234,18.19,19.752,18.998,18.995,18.998z M12.5,13h-1L11,7
	h2L12.5,13z M12.999,16c0,0.552-0.448,1-1,1s-1-0.448-1-1s0.448-1,1-1C12.552,15,12.999,15.448,12.999,16z"
              />
            </svg>
            <span
              class="TagText-bWoQAI beIloY"
            >
              Thread not found
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      Panel Body
    </div>
  </div>
</div>
`;
